--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
- background-color: bisque;
- font-family: roboto;
+ background-color: #123c69;
+ font-family: sans-serif;
 
 }
 
 h1{
-    color:black;
+    color:white;
     font-size: 64px;
     letter-spacing: 2px;
     margin-top: 80px;
@@ -19,7 +19,7 @@ h1{
     max-width: 960px;
     margin: 30px auto;
     padding:  20px 30px;
-    border-radius: 100px 100px 100px 100px;
+    border-radius: 0px 0px 0px 0px;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
     position: center;
 }
@@ -28,6 +28,14 @@ h1{
 ul{
     list-style-type: none;
     padding: 0;
+    background: #fff;
+    max-width: 960px;
+    margin: 30px auto;
+    padding:  20px 30px;
+    border-radius: 0px 0px 0px 0px;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+    position: center;
+    font-family: Verdana,Tahoma, sans-serif;
 }
 
 li{
@@ -93,14 +101,14 @@ form:after{
 }
 
 button{
-    border: 0;
+    border: 5px solid black;
     background: #fff;
     border-radius: 10px;
     padding: 13px;
     width: 14%;
     box-shadow: -1px 0px 1px rgba(0,0,0,0.1);
     font-weight: bold;
-    font-family: ubuntu;
+    font-family: sans-serif;
     letter-spacing: 1px;
     color:black;
 }
