--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,11 @@
 body{
-    background-color:bisque;
-    font-family: roboto;
+    background-color:#123c69;
+    font-family: sans-serif;
    
    }
    
    h1{
-       color:black;
+       color:white;
        font-size: 64px;
        letter-spacing: 2px;
        margin-top: 80px;
@@ -19,7 +19,7 @@ body{
        max-width: 960px;
        margin: 30px auto;
        padding:  20px 30px;
-       border-radius: 100px 100px 100px 100px;
+       border-radius: 0px 0px 0px 0px;
        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
        position: center;
    }
@@ -28,6 +28,14 @@ body{
    ul{
        list-style-type: none;
        padding: 0;
+       background: #fff;
+       max-width: 960px;
+       margin: 30px auto;
+       padding:  20px 30px;
+       border-radius: 0px 0px 0px 0px;
+       box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+       position: center;
+       font-family: Verdana,Tahoma, sans-serif;
    }
    
    li{
@@ -93,7 +101,7 @@ body{
    }
    
    button{
-       border: 0;
+       border: 5px solid black;
        background: #fff;
        border-radius: 10px;
        padding: 13px;
