--- a/style3.css
+++ b/style3.css
@@ -1,10 +1,10 @@
 body{
-background-color: bisque;
-font-family: roboto;
+background-color:#123c69;
+font-family: sans-serif;
 }
 
 h1{
-    color:black;
+    color:white;
     font-size: 64px;
     letter-spacing: 2px;
     margin-top: 80px;
@@ -14,7 +14,7 @@ h1{
 
 
 a{
-    color:black;
+    color:white;
     font-size: 24px;
     letter-spacing: 2px;
     margin-top: 80px;
@@ -29,7 +29,7 @@ a{
 
 .flex-child{
 flex:1;
-border: 5px solid black;
+font-family: Verdana,Tahoma, sans-serif;
 }
 
 .flex-child:first-child{
