--- a/style1.css
+++ b/style1.css
@@ -1,16 +1,15 @@
 body{
-    background-color:#123c69;
-    font-family: sans-serif;
-   
-   }
+    background-color:#77a6f7;
+    font-family: garamond;
+    }
    
    h1{
-       color:white;
+       color:black;
        font-size: 64px;
        letter-spacing: 2px;
        margin-top: 80px;
        text-align: center;
-       font-family: castellar;
+       font-family: garamond;
    }
    
    
@@ -28,10 +27,9 @@ body{
    ul{
        list-style-type: none;
        padding: 0;
-       background: #fff;
+       background-color:#123c69;
        max-width: 960px;
        margin: 30px auto;
-       padding:  20px 30px;
        border-radius: 0px 0px 0px 0px;
        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
        position: center;
