--- a/style3.css
+++ b/style3.css
@@ -1,37 +1,49 @@
 body{
-background-color:#123c69;
-font-family: sans-serif;
+background-color:#77a6f7;
+font-family: garamond;
 }
 
 h1{
-    color:white;
+    color:black;
     font-size: 64px;
     letter-spacing: 2px;
     margin-top: 80px;
     text-align: center;
-    font-family: castellar;
+    font-family: garamond;
+    font-weight: bold;
+    
   }
 
 
 a{
-    color:white;
+    color:black;
     font-size: 24px;
     letter-spacing: 2px;
     margin-top: 80px;
     text-align: center;
+    text-decoration: none;
 
 }
 
 .flex-container{
- display: flex;
- 
+    display: flex;
 }
 
 .flex-child{
 flex:1;
-font-family: Verdana,Tahoma, sans-serif;
+font-family: garamond;
+
+
 }
 
 .flex-child:first-child{
-    margin-right:20px;
+    margin-right:50px;
+}
+.cen{
+    
+   border: 5px solid black;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
 }
