--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 body{
+    background-image: url("Can\ You\ Feel\ The\ Love\ Tonight.jpg");
     background-color:#77a6f7;
-     font-family: garamond;
-
+    font-family: montserrat;
 }
 
 h1{
-    color:black;
+    color:white;
     font-size: 64px;
     letter-spacing: 2px;
     margin-top: 80px;
     text-align: center;
-    font-family: garamond;
+    font-family:montserrat;
+    font-weight: bold;
+    text-shadow: 0 0 5px white;
 }
 
 
 .content{
-    background: #fff;
-    max-width: 960px;
+    background:transparent;
+    max-width: 965px;
     margin: 30px auto;
-    padding:  20px 30px;
+    padding:  0px;
     border-radius: 0px 0px 0px 0px;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+    color: inherit;
     position: center;
 }
 
@@ -28,27 +30,33 @@ h1{
 ul{
     list-style-type: none;
     padding: 0;
-    background-color:#123c69;
+    background-color:inherit;
     max-width: 960px;
     margin: 30px auto;
     border-radius: 0px 0px 0px 0px;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 0px rgba(0,0,0,0);
     position: center;
-    font-family: Verdana,Tahoma, sans-serif;
+    font-family: montserrat;
 }
 
 li{
-    padding: 20px;
+    padding: 15px;
     background: #f6f6f6;
-    font-size: 20px;
+    font-size: 24px;
     color:black;
     position: relative;
-    border-bottom: 1px solid #e6e6e6;
+    border-radius: 15px 15px 15px 15px;
+    border-bottom: 1px solid inherit;
     height: 46px;
+    align-content: center;
+    height: 1.5vw;
+    overflow-wrap:break-word ;
+    
 }
 li:nth-child(even){
-    padding: 20px;
+    padding: 15px;
     background: #f2f2f2;
+    
 }
 
 li span{
@@ -71,6 +79,7 @@ li div{
     padding: 10px 0;
     font-weight:  bold;
     cursor:  pointer;
+    border-radius: 15px;
 }
 
 form input{
@@ -78,7 +87,7 @@ form input{
     width: 38%;
     margin: 0;
     border: 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #77a6f7;
     margin: 0 1%;
     padding: 10px;
     display: block;
@@ -88,7 +97,7 @@ form input{
 
 form input:focus{
     outline: none;
-    border-bottom: 3px solid #88236f;
+    border-bottom: 3px solid currentcolor;
     padding-bottom: 8px;
     transition: all ease 0.2s;
 }
@@ -100,14 +109,21 @@ form:after{
 }
 
 button{
-    border: 5px solid black;
-    background: #fff;
-    border-radius: 10px;
-    padding: 13px;
-    width: 14%;
-    box-shadow: -1px 0px 1px rgba(0,0,0,0.1);
+    cursor:pointer;
+    background:transparent;
+    border: 0;
+    padding: 0;
+    width: 0;
     font-weight: bold;
     font-family: sans-serif;
+    font-size: 2.5rem;
     letter-spacing: 1px;
-    color:black;
+    color:inherit;
 }
+
+.test{
+ background:transparent;
+ border-bottom:1px solid black;
+ }
+
+ 
