--- a/style3.css
+++ b/style3.css
@@ -1,40 +1,61 @@
 body{
+    background-image: url("Can\ You\ Feel\ The\ Love\ Tonight.jpg");
 background-color:#77a6f7;
-font-family: garamond;
-border:5px solid black;
+font-family: montserrat;
 }
 
 h1{
-    color:black;
+    color:white;
     font-size: 64px;
     letter-spacing: 2px;
     margin-top: 80px;
     text-align: center;
-    font-family: garamond;
+    font-family:montserrat;
     font-weight: bold;
+    text-shadow: 0 0 5px white;
+    letter-spacing: 5px;
     
   }
 
 
 a{
-    color:black;
+    color:white;
     font-size: 24px;
     letter-spacing: 2px;
     margin-top: 80px;
     text-align: center;
     text-decoration: none;
+   }
 
-}
-
-.flex-container{
+.flex-container1{
     display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    background-color:transparent;
+    padding:20px;
+    float:left;
+    text-align: center;
+    text-decoration: none;
+    width: 40vw;
+    margin-right: 30px;
+    
+}
+.flex-container2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: transparent;
+    padding:20px;
+    float:right;
+    text-align: center;
+    text-decoration: none;
+    width: 40vw;
 }
 
 .flex-child{
 flex:1;
 font-family: garamond;
-
-
+align-items: center;
 }
 
 .flex-child:first-child{
@@ -42,7 +63,68 @@ font-family: garamond;
 }
 .cen{
      display:flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content:center;
+    height: 50vh;
+}
+
+.icon1{
+    width: 225px;
+    height: 225px;
+    display: inline-block;
+    border-radius: 10px;
+    padding:15px 25px;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin:10px 15px;
+    background-image:url("img3.png");
+    background-size: cover;
+    transition: transform 0.5s;
+    align-content: center;
+   
+}
+.icon2{
+    width: 230px;
+    height: 230px;
+    display: inline-block;
+    border-radius: 10px;
+    padding:15px 25px;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin:10px 15px;
+    background-image:url("img1.png");
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.5s;
+    align-content: center;
+   
+}
+.icon1:hover{
+    transform: translateY(-10px);
+   
+}
+.icon2:hover{
+    transform: translateY(-10px);
+    
+    
+}
+
+.title1{
+    position: absolute;
+    top: 48%;
+    left: 32%;
+    color: white;
+    text-shadow: 0 0 5px white;
+    font-family: montserrat;
+}
+
+.title2{
+    position: absolute;
+    top: 48%;
+    right: 32%;
+    color: white;
+    text-shadow: 0 0 5px white;
+    font-family: montserrat;
+   
 }
