--- a/style3.css
+++ b/style3.css
@@ -128,3 +128,51 @@ align-items: center;
     font-family: montserrat;
    
 }
+
+
+@media screen and (max-width:1024px){
+    .title1{
+        position: absolute;
+        top: 52%;
+        left: 10%;
+        color: white;
+        text-shadow: 0 0 5px white;
+        font-family: montserrat;
+    }
+    
+    
+}
+@media screen and (max-width:1024px){
+    .title2{
+        position: absolute;
+        top: 52%;
+        right: 10%;
+        color: white;
+        text-shadow: 0 0 5px white;
+        font-family: montserrat;
+    }
+    
+    
+}
+@media screen and (max-width:1024px){
+    .icon2{
+        width: 230px;
+        height: 230px;
+        display: inline-block;
+        border-radius: 10px;
+        padding:15px 25px;
+        box-sizing: border-box;
+        cursor: pointer;
+        margin:10px 15px;
+        background-image:url("img1.png");
+        background-position: center;
+        background-size: cover;
+        transition: transform 0.5s;
+        align-content: center;
+        position: absolute;
+        top:27%
+       
+    }
+    
+    
+}
