--- a/style1.css
+++ b/style1.css
@@ -147,3 +147,21 @@ font-family: montserrat;
     color: black;
     opacity: 5;
 }
+
+
+@media screen and (max-width:1366px){
+    li{
+        padding: 15px;
+        background: #f6f6f6;
+        font-size: 24px;
+        color:black;
+        position: relative;
+        border-radius: 15px 15px 15px 15px;
+        border-bottom: 1px solid inherit;
+        height: 46px;
+        align-content: center;
+        height: 5vh;
+        overflow-wrap:break-word ;
+        
+    }
+}
