--- a/csstest.css
+++ b/csstest.css
@@ -102,6 +102,7 @@ align-items: center;
 }
 .icon1:hover{
     transform: translateY(-10px);
+
    
 }
 .icon2:hover{
@@ -130,33 +131,7 @@ align-items: center;
 }
 
 
-@media screen and (max-width:1024px){
-    .title1{
-        position: absolute;
-        top: 27%;
-        left: 25%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-        display: none;
-        
-    }
-    
-    
-}
-@media screen and (max-width:1024px){
-    .title2{
-        position: absolute;
-        top: 27%;
-        right: 24%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-        display: none;
-    }
-    
-    
-}
+
 @media screen and (max-width:786px){
     .icon2{
         width: 230px;
@@ -180,55 +155,13 @@ align-items: center;
     
 }
 
-@media screen and (max-width:1366px){
-    .title1{
-        position: absolute;
-        top: 71.8%;
-        left: 28%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-        
-    }
-    
-    
-}
-@media screen and (max-width:1366px){
-    .title2{
-        position: absolute;
-        top: 72%;
-        right: 28%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-    }
-}
+.icon1:hover{
 
-@media screen and (max-height:786px){
-    .title1{
-        position: absolute;
-        top: 60%;
-        left: 29.5%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-        
-        
-    }
-    
-    
+    background-image: url("test.png");
+    transition: 0.2s;
 }
-@media screen and (max-height:786px){
-    .title2{
-        position: absolute;
-        top: 60%;
-        right: 30%;
-        color: white;
-        text-shadow: 0 0 5px white;
-        font-family: montserrat;
-        
-        
-    }
-    
-    
+.icon2:hover{
+
+    background-image: url("test2.png");
+    transition: 0.2s;
 }
